# arrange-it

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: lint.yml
app/: __init__.py  exceptions.py  main.py  misc.py  settings.py
app/api/: __init__.py  admin.py  auth.py  event.py  place.py  rank.py  registration.py  role.py  tag.py  user.py
app/api/user/: __init__.py  admin.py  auth.py  registration.py
app/dependencies/: __init__.py  db.py
app/models/: __init__.py  event.py  place.py  subscription.py  tag.py  user.py
app/models/db/: __init__.py  user.py
app/models/representation/: __init__.py  user.py
app/models/responses/: __init__.py
app/services/: __init__.py  admin.py  comment.py  event.py  photo.py  place.py  rank.py  role.py  tag.py
app/services/place/: __init__.py  misc.py
app/services/user/: __init__.py  auth.py  event.py  misc.py
db/: schema.sql
db/migrations/: 20221017070348_v1.sql  20221102111859_rank_and_roles.sql
docker/: Dockerfile
hooks/: .pre-commit-config.yaml
tests/: test_base_geometry.py
