[tool.poetry]
name = "arrange-it"
version = "0.1.1"
description = ""
authors = ["Maxim Dunaev"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
asyncpg = "^0.26.0"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.19.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
