[tool.poetry]
name = "arrange-it"
version = "0.1.1"
description = ""
authors = ["Maxim Dunaev"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
asyncpg = "^0.26.0"
asyncio = "^3.4.3"
PyJWT = "^2.6.0"
python-decouple = "^3.6"
pydantic = {extras = ["email"], version = "^1.10.2"}
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.19.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
